src/test/ui/lang-items/lang-item-generic-requirements.stderr
error[E0718]: `add` language item must be applied to a trait with 1 generic argument
  --> $DIR/lang-item-generic-requirements.rs:10:1
   |
LL | #[lang = "add"]
   | ^^^^^^^^^^^^^^^
LL | trait MyAdd<'a, T> {}
   |            ------- this trait has 2 generic arguments

error[E0718]: `drop_in_place` language item must be applied to a function with at least 1 generic argument
  --> $DIR/lang-item-generic-requirements.rs:14:1
   |
LL | #[lang = "drop_in_place"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | fn my_ptr_drop() {}
   |               - this function has 0 generic arguments

error[E0718]: `index` language item must be applied to a trait with 1 generic argument
  --> $DIR/lang-item-generic-requirements.rs:18:1
   |
LL | #[lang = "index"]
   | ^^^^^^^^^^^^^^^^^
LL | trait MyIndex<'a, T> {}
   |              ------- this trait has 2 generic arguments

error[E0718]: `phantom_data` language item must be applied to a struct with 1 generic argument
  --> $DIR/lang-item-generic-requirements.rs:22:1
   |
LL | #[lang = "phantom_data"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | struct MyPhantomData<T, U>;
   |                     ------ this struct has 2 generic arguments

error[E0718]: `owned_box` language item must be applied to a struct with at least 1 generic argument
  --> $DIR/lang-item-generic-requirements.rs:26:1
   |
LL | #[lang = "owned_box"]
   | ^^^^^^^^^^^^^^^^^^^^^
LL |
LL | struct Foo;
   |           - this struct has 0 generic arguments

error[E0718]: `start` language item must be applied to a function with 1 generic argument
  --> $DIR/lang-item-generic-requirements.rs:32:1
   |
LL | #[lang = "start"]
   | ^^^^^^^^^^^^^^^^^
LL |
LL | fn start(_: *const u8, _: isize, _: *const *const u8) -> isize {
   |         - this function has 0 generic arguments

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0718`.
